--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0"
-fehler = "1.0"
+dotenv = "0.15"
 sailfish = "0.3"
+diesel_migrations = "1.4"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 axum = { version = "0.4", default_features = false, features = ["http1"] }
-diesel = { version = "1.4", default_features = false, features = ["sqlite"] }
+diesel = { version = "1.4", default_features = false, features = ["sqlite", "r2d2"] }
